# kraktak

./: .gitignore  CHANGELOG.md  Dockerfile.deb  Dockerfile.rpm  HANDOFF.md  MANIFEST.in  Makefile  README.md  kraktak-example.conf  mkdocs.yml  pyproject.toml  requirements_test.txt  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yml
debian/: adsbcot.conf  adsbcot.postinst  adsbcot.service  kraktak.conf  kraktak.postinst  kraktak.service
docker/: Dockerfile  adsbcot-docker-example.conf  docker-compose.yml  kraktak-docker-example.conf  start.sh
docs/: aircraft_data.md  configuration.md  conop.md  examples.md  installation.md  requirements.md  troubleshooting.md  usage.md
extras/: install_kraken_api_agent.sh
src/kraktak/: __init__.py  __main__.py  classes.py  config_loader.py  constants.py  control.py  dashboard.py  functions.py  gps.py  multicast.py  telemetry.py
tests/: conftest.py  test_adsbx.py  test_classes.py  test_config_loader.py  test_control.py  test_functions.py  test_multicast.py  test_schema.py  test_stratux.py  test_telemetry.py
