# Setup configuration for KrakTAK: Next-Gen KrakenSDR to TAK Bridge.
#
# Copyright Sensors & Signals LLC https://www.snstac.com
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[metadata]
name = kraktak
version = file: src/kraktak/VERSION
url = https://github.com/snstac/kraktak
project_urls =
  CI: GitHub Actions = https://github.com/snstac/kraktak/actions
  GitHub: issues = https://github.com/snstac/kraktak/issues
  GitHub: repo = https://github.com/snstac/kraktak
description = KrakTAK: Next-Gen KrakenSDR to TAK Bridge.
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Sensors & Signals LLC
maintainer_email = oss@undef.net
license = Apache 2.0
license_files = LICENSE
classifiers =
  License :: OSI Approved :: Apache Software License
  Intended Audience :: Developers
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Development Status :: 5 - Production/Stable
  Operating System :: POSIX
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft :: Windows
  Operating System :: OS Independent
keywords =
  Cursor on Target
  CoT
  ATAK
  TAK
  WinTAK
  TAK Server
  KrakenSDR
  SDR
  RDF
  DOA
  LOB
  SIGINT

[options]
packages = find:
include_package_data = True
python_requires = >=3.9, <4
package_dir =
  = src
install_requires =
  pytak[with-crypto] >= 7.3.10
  aiohttp < 4.0.0
  takline @ git+https://github.com/snstac/takline.git@v0.1.2

[options.packages.find]
where = src
include = kraktak*

[options.package_data]
kraktak = VERSION

[options.entry_points]
console_scripts =
    kraktak = kraktak.commands:main
    kraktak-dashboard = kraktak.dashboard:main

[options.extras_require]
gpsd =
  gpsd-py3
test =
  pytest
  pytest-asyncio
  pytest-cov
  pylint
  flake8
  black
  lxml

[bdist_rpm]
python = /usr/bin/python3

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203, E704

[pylint]
max-line-length = 88

[pycodestyle]
ignore = E203
max_line_length = 88
